# Teminder

./: .gitignore  AIAssistant.cpp  AIAssistant.hpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  DatabaseManager.cpp  DatabaseManager.hpp  GoogleSheets.cpp  GoogleSheets.hpp  README.md  RedisManager.cpp  RedisManager.hpp  Task.hpp  TaskListView.cpp  TaskListView.hpp  build.sh  config_sample.json  main.cpp
